<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ImageView
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_logo"
        android:layout_marginBottom="@dimen/custom_margin"
        android:contentDescription="@string/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size"
            android:inputType="textEmailAddress"
            android:layout_margin="@dimen/custom_margin"
            android:hint="@string/email_hint"
            android:autofillHints="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size"
            android:layout_margin="@dimen/custom_margin"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/font_size"
            android:paddingHorizontal="50dp"
            android:layout_gravity="center"
            android:enabled="false"
            android:layout_marginTop="@dimen/double_custom_margin"
            android:text="@string/enter"
            style="@style/CustomButtons"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="@dimen/font_size"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/double_custom_margin"
            android:text="@string/registration"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>